eka hyvä versio

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <p><strong> Pyry Pömppänen</strong></p>
           </h2>
           <p><b>villakoira</b></p>
+          <img class="kuva" src="/pomp.jpg" />
         </div>
         <div class="osoite">
           <h6>
@@ -93,6 +94,7 @@
     <h3>
       <strong>Harrastukset</strong>
     </h3>
-    Kavereille huutaminen, lintujen jahtaaminen, agility, leikkiminen, hömpöttäminen, haistelu, namien etsintä, ulkoilu
+    Kavereille huutaminen, lintujen jahtaaminen, agility, leikkiminen,
+    hömpöttäminen, haistelu, namien etsintä, ulkoilu
   </body>
 </html>
